--- a/index.html
+++ b/index.html
@@ -2,26 +2,7 @@
 <html lang="pt-BR">
 
 <head>
-  <!-- Google Tag Manager -->
-  <script async>(function (w, d, s, l, i) {
-      w[l] = w[l] || []; w[l].push({
-        'gtm.start':
-          new Date().getTime(), event: 'gtm.js'
-      }); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-P9HQ65K');</script>
-  <!-- End Google Tag Manager -->
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-V6BN0TCY3W"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-V6BN0TCY3W');
-  </script>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -46,7 +27,7 @@
   <link rel="manifest" href="./assets/favicon/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#B21268">
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -61,14 +42,11 @@
 </head>
 
 <body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P9HQ65K" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+
   <nav class="" id="nav">
     <div class="wrapper">
       <a class="logo" href="#home">
-        <!-- <img src="./assets/logo-blumis-white.svg" alt="" /> -->
+        <!-- <img data-src="./assets/logo-blumis-white.svg" alt="" /> -->
         <h2>Blumis</h2>
       </a>
 
@@ -76,7 +54,7 @@
         <ul>
           <li><a onclick="closeMenu()" href="#home">Inicio</a></li>
           <li><a onclick="closeMenu()" href="#services">Razões</a></li>
-          <li><a onclick="closeMenu()" href="#products">Produtos</a></li>
+          <li><a onclick="closeMenu()" href="#products">Vestidos</a></li>
           <li><a onclick="closeMenu()" href="#about">Sobre</a></li>
           <li><a onclick="closeMenu()" href="#testimonials">Depoimentos</a></li>
           <li><a onclick="closeMenu()" href="#contact">Contato</a></li>
@@ -170,7 +148,7 @@
       </div>
 
       <div class="col-b">
-        <img src="./assets/images/blumis-hero.png" alt="Mulher usando vestido Blumis" />
+        <img data-src="./assets/images/blumis-hero.png" alt="Mulher usando vestido Blumis" class="lazyload" />
       </div>
 
       <div class="stats">
@@ -180,12 +158,13 @@
         </div>
 
         <div class="stat">
-          <h3>P ao G1</h3>
+          <h3>P ao GG</h3>
           <p>Vários tamanhos disponíveis</p>
         </div>
 
         <div class="stat">
-          <img src="./assets/icons/entrega-rapida2.svg" alt="icone de entrega rápida" id="express">
+          <img data-src="./assets/icons/entrega-rapida2.svg" alt="icone de entrega rápida" id="express"
+            class="lazyload">
           <p>Entrega rápida</p>
         </div>
       </div>
@@ -262,30 +241,39 @@
     <div class="ism-slider" data-transition_type="fade" data-radio_type="thumbnail" id="my-Newslider">
       <ol>
         <li>
-          <img src="./assets/images/conjunto-sarah-blumis-01.png" alt="Conjunto Blumis Sarah na cor preta">
+          <img data-src="./assets/images/conjunto-sarah-blumis-01.png" alt="Conjunto Blumis Sarah na cor preta"
+            class="lazyload">
           <!-- <div class="ism-caption ism-caption-0">Vestido Antonela</div> -->
         </li>
         <!-- <li>
-          <img src="./assets/images/conjunto-sarah-blumis-02.png"
+          <img data-src="./assets/images/conjunto-sarah-blumis-02.png"
             alt="Conjunto Blumis Sarah na cor preta parte superior">
         </li> -->
         <li>
-          <img src="./assets/images/saia-sara-blumis.png" alt="Saia Sarah Blumis cor preta">
+          <img data-src="./assets/images/saia-sara-blumis.png" alt="Saia Sarah Blumis cor preta" class="lazyload">
         </li>
         <li>
-          <img src="./assets/images/conjunto-blumis-vermelho-e-branco.png"
-            alt="Conjunto Blumis Julia vermelho e branco">
+          <img data-src="./assets/images/conjunto-blumis-vermelho-e-branco.png"
+            alt="Conjunto Blumis Julia vermelho e branco" class="lazyload">
         </li>
         <li>
-          <img src="./assets/images/conjunto-julia-blumis-04.png" alt="Conjunto Blumis Julia vermelho e branco">
+          <img data-src="./assets/images/conjunto-julia-blumis-04.png" alt="Conjunto Blumis Julia vermelho e branco"
+            class="lazyload">
         </li>
-        <li><img src="./assets/images/vestido-antonella-vinho-blumis.png" alt="Vestido Blumis Antonella cor vinho"></li>
-        <li><img src="./assets/images/vestido-antonella-vinho-blumis-01.png" alt="Vestido Blumis Antonela vinho"></li>
-        <li><img src="./assets/images/vestido-antonela-azul-blumis.png" alt="Vestido Blumis Antonella azul"></li>
-        <li><img src="./assets/images/vestido-clarice-blumis-preto.png" alt="Vestido Blumis Clarice preto"></li>
-        <li><img src="./assets/images/vestido-clarice-blumis-01.png" alt="Vestido Blumis Clarice preto"></li>
-        <li><img src="./assets/images/vestido-marcela-vermelho-blumis.png" alt="Vestido Blumis Marcela vermelho"></li>
-        <li><img src="./assets/images/vestido-marcela-vermelho-blumis-01.png" alt="Vestido Blumis Marcela vermelho">
+        <li><img data-src="./assets/images/vestido-antonella-vinho-blumis.png" alt="Vestido Blumis Antonella cor vinho"
+            class="lazyload"></li>
+        <li><img data-src="./assets/images/vestido-antonella-vinho-blumis-01.png" alt="Vestido Blumis Antonela vinho"
+            class="lazyload"></li>
+        <li><img data-src="./assets/images/vestido-antonela-azul-blumis.png" alt="Vestido Blumis Antonella azul"
+            class="lazyload"></li>
+        <li><img data-src="./assets/images/vestido-clarice-blumis-preto.png" alt="Vestido Blumis Clarice preto"
+            class="lazyload"></li>
+        <li><img data-src="./assets/images/vestido-clarice-blumis-01.png" alt="Vestido Blumis Clarice preto"
+            class="lazyload"></li>
+        <li><img data-src="./assets/images/vestido-marcela-vermelho-blumis.png" alt="Vestido Blumis Marcela vermelho"
+            class="lazyload"></li>
+        <li><img data-src="./assets/images/vestido-marcela-vermelho-blumis-01.png" alt="Vestido Blumis Marcela vermelho"
+            class="lazyload">
         </li>
       </ol>
     </div>
@@ -314,7 +302,7 @@
             Nosso sonho sempre foi ajudar outras mulheres a sentirem-se valorizadas e bem com consigo mesmo. Sabemos que
             isso
             tem muito haver com a autoestima e o cuidado próprio. A partir dessa idéia, começamos a pensar: "Como ajudar
-            mulheres que estão na busca pelo autocuidado?". A <strong>Blumis</strong> surgiu a partir da inicitiva de
+            mulheres que estão na busca pelo autocuidado?". A <strong>Blumis</strong> surgiu a partir da iniciativa de
             unir <strong>elegância</strong> , <strong>modéstia</strong> e <strong>preço acessível</strong> , como uma
             forma de levar a cada mulher a oportunidade de sentir-se bem, vestindo aquilo que lhe 🤍 faz bem.
           </p>
@@ -323,7 +311,8 @@
       </div>
 
       <div class="col-b">
-        <img src="./assets/images/sobre-a-blumis.webp" alt="Sobre a Blumis imagem de tecido tesoura e alfinete" />
+        <img data-src="./assets/images/sobre-a-blumis.webp" alt="Sobre a Blumis imagem de tecido tesoura e alfinete"
+          class="lazyload" />
       </div>
 
     </div>
@@ -348,7 +337,8 @@
                 </p>
 
                 <cite>
-                  <img src="https://randomuser.me/api/portraits/women/87.jpg" alt="Cliente Blumis satisfeita">
+                  <img data-src="https://randomuser.me/api/portraits/women/87.jpg" alt="Cliente Blumis satisfeita"
+                    class="lazyload">
                   Maria Silva
                 </cite>
               </blockquote>
@@ -363,8 +353,8 @@
                 </p>
 
                 <cite>
-                  <img src="./assets/images/314650202_419823883694723_2841325854598355426_n.jpg"
-                    alt="Cliente Blumis satisfeita">
+                  <img data-src="./assets/images/314650202_419823883694723_2841325854598355426_n.jpg"
+                    alt="Cliente Blumis satisfeita" class="lazyload">
                   Mayara Gracek
                 </cite>
               </blockquote>
@@ -378,7 +368,8 @@
                 </p>
 
                 <cite>
-                  <img src="https://randomuser.me/api/portraits/women/36.jpg" alt="Cliente Blumis satisfeita">
+                  <img data-src="https://randomuser.me/api/portraits/women/36.jpg" alt="Cliente Blumis satisfeita"
+                    class="lazyload">
                   Tamara Souza
                 </cite>
               </blockquote>
@@ -392,7 +383,8 @@
                 </p>
 
                 <cite>
-                  <img src="https://randomuser.me/api/portraits/women/11.jpg" alt="Cliente Blumis satisfeita">
+                  <img data-src="https://randomuser.me/api/portraits/women/11.jpg" alt="Cliente Blumis satisfeita"
+                    class="lazyload">
                   Cinthia Alves
                 </cite>
               </blockquote>
@@ -409,7 +401,8 @@
                 </p>
 
                 <cite>
-                  <img src="https://randomuser.me/api/portraits/women/71.jpg" alt="Cliente Blumis satisfeita">
+                  <img data-src="https://randomuser.me/api/portraits/women/71.jpg" alt="Cliente Blumis satisfeita"
+                    class="lazyload">
                   Vania Paiva
                 </cite>
               </blockquote>
@@ -439,7 +432,7 @@
             <li>
               <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 474 474"
-                style="enable-background:new 0 0 474 474;" xml:space="preserve">
+                style="enable-background:new 0 0 474 474;" xml:space="preserve" fill="white">
                 <g>
                   <path d="M437.5,59.3h-401C16.4,59.3,0,75.7,0,95.8v282.4c0,20.1,16.4,36.5,36.5,36.5h401c20.1,0,36.5-16.4,36.5-36.5V95.8
         C474,75.7,457.6,59.3,437.5,59.3z M432.2,86.3L239.5,251.1L46.8,86.3H432.2z M447,378.2c0,5.2-4.3,9.5-9.5,9.5h-401
@@ -556,7 +549,7 @@
                 </g>
               </svg>
 
-              <a href="instagram.com/_blumis">@_blumis</a>
+              <a href="https://www.instagram.com/_blumis/">@_blumis</a>
             </li>
           </ul>
 
@@ -574,10 +567,40 @@
 
 
       <div class="col-b">
-        <img src="./assets/images/vestido-marcela-vermelho-blumis-01.png" alt="mulher vestindo Blumis">
+        <!-- <img data-src="./assets/images/vestido-marcela-vermelho-blumis-01.png" alt="mulher vestindo Blumis"
+          class="lazyload"> -->
+
+        <div class="box">
+
+          <form action="https://formsubmit.co/981d569ab2c5c67bfec02f2ca7314597" method="POST">
+            <input type="hidden" name="_next" value="http://127.0.0.1:5502/trankyou.html">
+            <input type="hidden" name="_subject" value="Nova Mensagem Site Blumis!">
+            <input type="hidden" name="_captcha" value="true">
+            <input type="hidden" name="_autoresponse" value="sua mensagem personalizada">
+            <input type="hidden" name="_template" value="table">
+            <header>
+              <h4>Preencha nosso formulário</h4>
+              <p>Entraremos em contato o mais breve possível.</p>
+            </header>
+            <div class="inputBox">
+              <input type="text" name="name" required>
+              <span>Seu Nome</span>
+              <i></i>
+            </div>
+            <div class="inputBox">
+              <input type="email" name="email" required>
+              <span>E-mail</span>
+              <i></i>
+            </div>
+            <div class="inputBox">
+              <input type="text" name="text" required>
+              <span>Mensagem</span>
+              <i></i>
+            </div>
+            <button type="submit">Enviar</button>
+          </form>
+        </div>
       </div>
-
-
     </div>
   </section>
 
@@ -586,7 +609,8 @@
 
       <div class="col-a">
         <a class="logo" href="#home" arial-label="Logotipo Blumis">
-          <img src="./assets/images/logotipo-blumis.png" alt="logotipo da marca Blumis moda modesta">
+          <img data-src="./assets/images/logotipo-blumis.png" alt="logotipo da marca Blumis moda modesta"
+            class="lazyload">
         </a>
       </div>
 
@@ -616,7 +640,7 @@
             </a>
           </li>
           <li>
-            <a href="#" target="_blank" aria-label="Icone do Whatsapp">
+            <a href="https://wa.me/c/5511953579709" target="_blank" aria-label="Icone do Whatsapp">
               <svg width="25" height="25" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M13.8337 11.6667C13.667 11.5833 12.5837 11.0833 12.417 11C12.2503 10.9167 12.0837 10.9167 11.917 11.0833C11.7503 11.25 11.417 11.75 11.2503 11.9167C11.167 12.0833 11.0003 12.0833 10.8337 12C10.2503 11.75 9.66699 11.4167 9.16699 11C8.75033 10.5833 8.33366 10.0833 8.00033 9.58334C7.91699 9.41668 8.00033 9.25001 8.08366 9.16668C8.16699 9.08334 8.25033 8.91668 8.41699 8.83334C8.50033 8.75001 8.58366 8.58334 8.58366 8.50001C8.66699 8.41668 8.66699 8.25001 8.58366 8.16668C8.50033 8.08334 8.08366 7.08334 7.91699 6.66668C7.83366 6.08334 7.66699 6.08334 7.50033 6.08334C7.41699 6.08334 7.25033 6.08334 7.08366 6.08334C6.91699 6.08334 6.66699 6.25001 6.58366 6.33334C6.08366 6.83334 5.83366 7.41668 5.83366 8.08334C5.91699 8.83334 6.16699 9.58334 6.66699 10.25C7.58366 11.5833 8.75033 12.6667 10.167 13.3333C10.5837 13.5 10.917 13.6667 11.3337 13.75C11.7503 13.9167 12.167 13.9167 12.667 13.8333C13.2503 13.75 13.7503 13.3333 14.0837 12.8333C14.2503 12.5 14.2503 12.1667 14.167 11.8333C14.167 11.8333 14.0003 11.75 13.8337 11.6667ZM15.917 4.08334C12.667 0.833344 7.41699 0.833344 4.16699 4.08334C1.50033 6.75001 1.00033 10.8333 2.83366 14.0833L1.66699 18.3333L6.08366 17.1667C7.33366 17.8333 8.66699 18.1667 10.0003 18.1667C14.5837 18.1667 18.2503 14.5 18.2503 9.91668C18.3337 7.75001 17.417 5.66668 15.917 4.08334ZM13.667 15.75C12.5837 16.4167 11.3337 16.8333 10.0003 16.8333C8.75033 16.8333 7.58366 16.5 6.50033 15.9167L6.25033 15.75L3.66699 16.4167L4.33366 13.9167L4.16699 13.6667C2.16699 10.3333 3.16699 6.16668 6.41699 4.08334C9.66699 2.00001 13.8337 3.08334 15.8337 6.25001C17.8337 9.50001 16.917 13.75 13.667 15.75Z"
@@ -643,14 +667,14 @@
     </svg>
   </a>
 
+  <script src="./js/lazysizes.min.js"></script>
+
   <script src="./js/ism-min.js" defer></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
   <!-- SCROLLREVEAL LIB -->
   <script src="https://unpkg.com/scrollreveal"></script>
   <script src="./js/main.js"></script>
-
-
 
 </body>
 
